crates/sith_python_parser/src/snapshots/python_parser__string__tests__triple_quoted_raw_fstring.snap
---
source: crates/sith_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        ExprStmt {
            range: 0..11,
            value: FString(
                FStringExpr {
                    range: 0..11,
                    value: FStringValue {
                        inner: Single(
                            FString(
                                FString {
                                    range: 0..11,
                                    elements: [
                                        Expression(
                                            FStringExpressionElement {
                                                range: 5..8,
                                                expression: Name(
                                                    NameExpr {
                                                        range: 6..7,
                                                        id: Name("x"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                debug_text: None,
                                                conversion: None,
                                                format_spec: None,
                                            },
                                        ),
                                    ],
                                    flags: FStringFlags {
                                        prefix: Raw {
                                            uppercase_r: false,
                                        },
                                        triple_quoted: true,
                                    },
                                },
                            ),
                        ),
                    },
                },
            ),
        },
    ),
]
